--- a/articles/azure-app-configuration/TOC.yml
+++ b/articles/azure-app-configuration/TOC.yml
@@ -85,14 +85,12 @@
       href: concept-github-action.md
     - name: イベント処理
       href: concept-app-configuration-event.md
-    - name: Security
+    - name: セキュリティ
       items:
         - name: カスタマー マネージド キーの暗号化
           href: concept-customer-managed-keys.md
         - name: プライベート エンドポイントを使用した構成ストアのセキュリティ保護
           href: concept-private-endpoint.md
-        - name: Azure マネージド ID と統合する
-          href: howto-integrate-azure-managed-service-identity.md
         - name: Azure Active Directory を使用してアクセスを有効にする
           href: concept-enable-rbac.md
         - name: Azure マネージド ID を割り当てる
@@ -115,6 +113,8 @@
       href: howto-app-configuration-event.md
     - name: 構成ストアの自動バックアップ
       href: howto-backup-config-store.md
+    - name: マネージド ID を使用して App Configuration にアクセスする
+      href: howto-integrate-azure-managed-service-identity.md
 - name: リファレンス
   items:
     - name: 構成
