--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: hub-page
   ms.date: 03/24/2020
   ms.author: trbye
-  ms.openlocfilehash: 455f71c7fd9defd7a1187f6b5df6b5b3b9c3131b
-  ms.sourcegitcommit: 73ac360f37053a3321e8be23236b32d4f8fb30cf
+  ms.openlocfilehash: 74fd89633e4add1c577e44b822f1f90a86b3f498
+  ms.sourcegitcommit: c28fc1ec7d90f7e8b2e8775f5a250dd14a1622a6
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/30/2020
-  ms.locfileid: "85563755"
+  ms.lasthandoff: 08/13/2020
+  ms.locfileid: "88167778"
 highlightedContent:
   items:
   - title: 音声サービスとは
@@ -51,15 +51,15 @@ conceptualContent:
       url: index-speech-to-text.yml
   - title: テキスト読み上げ
     links:
+    - itemType: overview
+      text: テキスト読み上げについて
+      url: text-to-speech.md
     - itemType: quickstart
-      text: スピーカーに音声を合成する
-      url: quickstarts/text-to-speech.md
-    - itemType: quickstart
-      text: オーディオ ファイルに音声を合成する
-      url: quickstarts/text-to-speech-audio-file.md
+      text: テキスト読み上げの概要
+      url: get-started-text-to-speech.md
     - itemType: how-to-guide
-      text: 音声合成の基本
-      url: text-to-speech-basics.md
+      text: SSML を使用して合成を改善する
+      url: speech-synthesis-markup.md
     footerLink:
       text: 詳細
       url: index-text-to-speech.yml
