--- a/articles/data-share/TOC.yml
+++ b/articles/data-share/TOC.yml
@@ -19,6 +19,8 @@
       href: terminology.md
     - name: ロールと要件
       href: concepts-roles-permissions.md
+    - name: 価格について
+      href: concepts-pricing.md
 - name: サンプル
   items:
     - name: コード サンプル
@@ -29,12 +31,12 @@
   items:
     - name: モニター
       href: how-to-monitor.md
-    - name: データセット マッピングの構成
-      href: how-to-configure-mapping.md
     - name: トラブルシューティング
       href: data-share-troubleshoot.md
     - name: データセットの追加
       href: how-to-add-datasets.md
+    - name: データセット マッピングの構成
+      href: how-to-configure-mapping.md
     - name: 受信者の追加
       href: how-to-add-recipients.md
     - name: 招待の削除
