--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -1,4 +1,4 @@
-- name: Stream Analytics のドキュメント
+- name: Azure Stream Analytics のドキュメント
   href: index.yml
 - name: 概要
   items:
@@ -122,7 +122,7 @@
       href: stream-analytics-concepts-checkpoint-replay.md
     - name: エラー ポリシー
       href: stream-analytics-output-error-policy.md
-- name: ハウツー ガイド
+- name: 操作方法ガイド
   items:
     - name: 管理する
       items:
