commit translated contents

--- a/articles/azure-portal/index.yml
+++ b/articles/azure-portal/index.yml
@@ -11,13 +11,13 @@ metadata:
   ms.collection: collection
   author: mblythe
   ms.author: mblythe
-  ms.date: 12/19/2019
-  ms.openlocfilehash: 277326eb6b120c4cc1b456a17c6f58791c66dd16
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.date: 08/05/2020
+  ms.openlocfilehash: f45fc98073dcc6eeee10c691fe9f93860e0fb654
+  ms.sourcegitcommit: 4913da04fd0f3cf7710ec08d0c1867b62c2effe7
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "75890771"
+  ms.lasthandoff: 08/14/2020
+  ms.locfileid: "88212080"
 landingContent:
 - title: Azure portal について
   linkLists:
@@ -47,9 +47,9 @@ landingContent:
       url: azure-portal-dashboard-share-access.md
   - linkListType: learn
     links:
-    - text: Azure 内でリソースを管理します
+    - text: Azure でのリソースの管理
       url: /learn/paths/manage-resources-in-azure/
-    - text: ロールベースのアクセス制御 (RBAC) を使用した Azure リソースのセキュリティ保護
+    - text: ロールベースのアクセス制御 (RBAC) で Azure リソースをセキュリティ保護する
       url: /learn//modules/secure-azure-resources-with-rbac/
 - title: はじめに
   linkLists:
@@ -76,7 +76,7 @@ landingContent:
   - linkListType: how-to-guide
     links:
     - text: ハイ コントラストを有効にする
-      url: azure-portal-change-theme-high-contrast.md
+      url: set-preferences.md#choose-a-theme-or-enable-high-contrast
 - title: サポート リクエストの作成と管理
   linkLists:
   - linkListType: how-to-guide
