--- a/articles/hdinsight/TOC.yml
+++ b/articles/hdinsight/TOC.yml
@@ -1,3 +1,5 @@
+- name: Azure HDInsight のドキュメント
+  href: index.yml
 - name: HDInsight サービス
   expanded: true
   items:
@@ -74,7 +76,7 @@
               href: overview-data-lake-storage-gen1.md
             - name: Azure Data Lake Storage Gen2 の概要
               href: overview-data-lake-storage-gen2.md
-    - name: 方法
+    - name: 操作方法ガイド
       items:
         - name: クラスターの作成
           items:
@@ -342,7 +344,7 @@
               href: ./spark/optimize-cluster-configuration.md
         - name: Spark 2.3 または 2.4 に移行する
           href: ./spark/migrate-versions.md
-    - name: 方法
+    - name: 操作方法ガイド
       items:
         - name: ツールの使用
           items:
@@ -471,7 +473,7 @@
           href: ./hdinsight-hadoop-create-linux-clusters-adf.md
         - name: Apache Hadoop ジョブを送信する
           href: ./hadoop/submit-apache-hadoop-jobs-programmatically.md
-    - name: 方法
+    - name: 操作方法ガイド
       items:
         - name: ツールの使用
           items:
@@ -616,7 +618,7 @@
           href: ./kafka/apache-kafka-performance-tuning.md
         - name: Kafka に関する FAQ
           href: ./kafka/kafka-faq.md
-    - name: 方法
+    - name: 操作方法ガイド
       items:
         - name: 開発
           items:
@@ -667,7 +669,7 @@
       items:
         - name: HDInsight での Apache HBase の使用
           href: ./hbase/apache-hbase-tutorial-get-started-linux.md
-    - name: 方法
+    - name: 操作方法ガイド
       items:
         - name: 開発
           items:
@@ -746,7 +748,7 @@
           href: ./interactive-query/gateway-best-practices.md
         - name: サイズ変更のガイドライン
           href: ./interactive-query/sizing-guidelines.md
-    - name: 方法
+    - name: 操作方法ガイド
       items:
         - name: 開発
           items:
@@ -843,7 +845,7 @@
           href: ./r-server/ml-services-tutorial-spark-compute.md
         - name: R Tools for Visual Studio の使用
           href: ./r-server/r-server-submit-jobs-r-tools-vs.md
-    - name: 方法
+    - name: 操作方法ガイド
       items:
         - name: 開発
           items:
@@ -875,7 +877,7 @@
           href: ./storm/apache-storm-write-data-lake-store.md
         - name: Apache Kafka と Apache Storm (Java)
           href: ./hdinsight-apache-storm-with-kafka.md
-    - name: 方法
+    - name: 操作方法ガイド
       items:
         - name: Storm から Spark への移行
           href: ./storm/migrate-storm-to-spark.md
@@ -943,7 +945,7 @@
           href: ./disk-encryption.md
         - name: Ranger と Apache Ambari での LDAP 同期
           href: ./domain-joined/ldap-sync.md
-    - name: 方法
+    - name: 操作方法ガイド
       items:
         - name: 資格情報の管理に ID ブローカーを使用する
           href: ./domain-joined/identity-broker.md
