--- a/articles/cognitive-services/Bing-Entities-Search/toc.yml
+++ b/articles/cognitive-services/Bing-Entities-Search/toc.yml
@@ -12,7 +12,7 @@
   items:
     - name: REST API
       items:
-        - name: 'C# の使用'
+        - name: C# の使用
           href: quickstarts/csharp.md
         - name: Java の使用
           href: quickstarts/java.md
@@ -72,7 +72,7 @@
       href: 'https://azure.microsoft.com/pricing/details/cognitive-services/bing-entity-search-api/'
     - name: UserVoice
       href: 'https://cognitive.uservoice.com/forums/601036-bing-entity-search-api'
-    - name: スタック オーバーフロー
+    - name: Stack Overflow
       href: 'https://stackoverflow.com/search?q=bing+entity+search'
     - name: リージョン別の提供状況
       href: 'https://azure.microsoft.com/global-infrastructure/services/'
@@ -81,7 +81,7 @@
     - name: ナレッジ ベース
       href: 'https://cognitive.uservoice.com/knowledgebase/topics/127875-bing-search-web-image-video-news-autosuggest'
     - name: API キーを取得する
-      href: 'https://azure.microsoft.com/try/cognitive-services/?api=bing-entities-search-api'
+      href: 'https://azure.microsoft.com/free/cognitive-services'
     - name: 試してみる
       href: 'https://dev.cognitive.microsoft.com/docs/services/7a3fb374be374859a823b79fd938cc65/'
     - name: Bing Entity Search エンドポイント
