--- a/articles/cognitive-services/bing-local-business-search/toc.yml
+++ b/articles/cognitive-services/bing-local-business-search/toc.yml
@@ -15,7 +15,7 @@
     - name: REST API
       expanded: true
       items:
-        - name: 'C# の使用'
+        - name: C# の使用
           href: quickstarts/local-quickstart.md
         - name: Java の使用
           href: quickstarts/local-search-java-quickstart.md
@@ -41,7 +41,7 @@
 - name: リソース
   items:
     - name: Cognitive Services を試す
-      href: 'https://azure.microsoft.com/try/cognitive-services/?api=bing-web-search-api'
+      href: 'https://azure.microsoft.com/free/cognitive-services'
     - name: 料金情報
       href: 'https://azure.microsoft.com/pricing/details/cognitive-services/search-api/'
     - name: コンプライアンス
