--- a/articles/cognitive-services/bing-visual-search/toc.yml
+++ b/articles/cognitive-services/bing-visual-search/toc.yml
@@ -12,7 +12,7 @@
     - name: REST API
       expanded: true
       items:
-        - name: 'C# の使用'
+        - name: C# の使用
           href: quickstarts/csharp.md
         - name: Java の使用
           href: quickstarts/java.md
@@ -83,7 +83,7 @@
     - name: 言語のサポート
       href: language-support.md
     - name: 無料のアクセス キーの取得
-      href: 'https://azure.microsoft.com/try/cognitive-services/?api=bing-visual-search-api'
+      href: 'https://azure.microsoft.com/free/cognitive-services'
     - name: 試してみる
       href: 'https://aka.ms/bingvisualsearchtryforfree'
     - name: スタック オーバーフロー
