--- a/articles/docker/index.yml
+++ b/articles/docker/index.yml
@@ -3,19 +3,19 @@ title: Docker on Azure のドキュメント
 summary: Docker は人気のあるコンテナー管理およびイメージング プラットフォームで、Linux および Windows 上のコンテナーを簡単に操作できます。 Docker on Azure の利用方法について説明します。
 metadata:
   title: Docker on Azure のドキュメント
-  description: Docker は人気のあるコンテナー管理およびイメージング プラットフォームで、Linux および Windows 上のコンテナーを簡単に操作できます。 Docker on Azure の利用方法について説明します。
+  description: Docker は人気のあるコンテナー管理およびイメージング プラットフォームで、Linux および Windows 上のコンテナーを簡単に操作できます。
   services: multiple
   ms.service: multiple
   ms.topic: landing-page
   author: georgewallace
   ms.author: gwallace
   ms.date: 03/08/2020
-  ms.openlocfilehash: 9205a47ee0ba3e6e0b328c8f481b15fe593ec5fb
-  ms.sourcegitcommit: 2ffa5bae1545c660d6f3b62f31c4efa69c1e957f
+  ms.openlocfilehash: 94d5dd74aad11e2271de52dd082cfb9287eb10c1
+  ms.sourcegitcommit: 152c522bb5ad64e5c020b466b239cdac040b9377
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/11/2020
-  ms.locfileid: "88080387"
+  ms.lasthandoff: 08/14/2020
+  ms.locfileid: "88224579"
 landingContent:
 - title: Docker on Azure のデプロイ
   linkLists:
