--- a/articles/cdn/index.yml
+++ b/articles/cdn/index.yml
@@ -3,18 +3,18 @@ title: Azure CDN のドキュメント
 summary: Azure Content Delivery Network (CDN) は、高帯域幅コンテンツを配信するためのグローバル CDN ソリューションです。 これは、Azure またはその他の場所でホストできます。 Azure CDN では、最も近いポイント オブ プレゼンス (POP) サーバーを使用して、Azure Blob Storage、Web アプリケーション、またはパブリックにアクセスできる Web サーバーから読み込まれた静的オブジェクトをキャッシュすることができます。 さらに Azure CDN では、各種のネットワーク最適化とルーティング最適化を利用して、キャッシュできない動的なコンテンツも高速化できます。
 metadata:
   title: Azure CDN のドキュメント - チュートリアル、API リファレンス
-  description: Azure Content Delivery Network (CDN) は、高帯域幅コンテンツを配信するためのグローバル CDN ソリューションです。 これは、Azure またはその他の場所でホストできます。 Azure CDN では、最も近いポイント オブ プレゼンス (POP) サーバーを使用して、Azure Blob Storage、Web アプリケーション、またはパブリックにアクセスできる Web サーバーから読み込まれた静的オブジェクトをキャッシュすることができます。 さらに Azure CDN では、各種のネットワーク最適化とルーティング最適化を利用して、キャッシュできない動的なコンテンツも高速化できます。
+  description: Azure または他の任意の場所にホストできる、高帯域幅コンテンツを配信するためのソリューションである Azure Content Delivery Network について説明します。
   ms.service: azure-cdn
   ms.topic: landing-page
   author: asudbring
   ms.author: allensu
   ms.date: 02/24/2020
-  ms.openlocfilehash: c3c9cd72a85744ac6b609b178ac4e7c2413b4080
-  ms.sourcegitcommit: 73ac360f37053a3321e8be23236b32d4f8fb30cf
+  ms.openlocfilehash: ed3c4f1794407ccdb841ea3c6ca35ff4d8e1a808
+  ms.sourcegitcommit: 9ce0350a74a3d32f4a9459b414616ca1401b415a
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/30/2020
-  ms.locfileid: "85554308"
+  ms.lasthandoff: 08/13/2020
+  ms.locfileid: "88192462"
 landingContent:
 - title: Azure CDN について
   linkLists:
