--- a/articles/iot-fundamentals/index.yml
+++ b/articles/iot-fundamentals/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 09/04/2019
-  ms.openlocfilehash: 08b54d7ae3217f9b9f7715ba2ccb3fe1a290cc05
-  ms.sourcegitcommit: 5cace04239f5efef4c1eed78144191a8b7d7fee8
+  ms.openlocfilehash: 85667dfcc33d7bc8d1bab5b73119be2ef3b81c40
+  ms.sourcegitcommit: faeabfc2fffc33be7de6e1e93271ae214099517f
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/08/2020
-  ms.locfileid: "86147116"
+  ms.lasthandoff: 08/13/2020
+  ms.locfileid: "88185997"
 highlightedContent:
   items:
   - title: Azure IoT とは?
@@ -74,20 +74,6 @@ conceptualContent:
     footerLink:
       url: ../iot-central/core/index.yml
       text: 詳細情報
-  - title: 事前に構築された IoT ソリューションをカスタマイズする
-    links:
-    - url: ../iot-accelerators/about-iot-accelerators.md
-      itemType: overview
-      text: Azure IoT ソリューション アクセラレータとは
-    - url: ../iot-accelerators/quickstart-remote-monitoring-deploy.md
-      itemType: quickstart
-      text: リモート監視ソリューションを試す
-    - url: ../iot-accelerators/quickstart-connected-factory-deploy.md
-      itemType: quickstart
-      text: コネクテッド ファクトリ ソリューションを試す
-    footerLink:
-      url: ../iot-accelerators/index.yml
-      text: 詳細情報
   - title: エッジ デバイスでクラウド インテリジェンスを実行する
     links:
     - url: ../iot-edge/about-iot-edge.md
@@ -130,6 +116,20 @@ conceptualContent:
     footerLink:
       url: ../iot-dps/index.yml
       text: 詳細情報
+  - title: スマート デバイスをソリューションに統合する
+    links:
+    - url: ../iot-pnp/overview-iot-plug-and-play.md
+      itemType: overview
+      text: IoT プラグ アンド プレイ プレビューとは
+    - url: ../iot-pnp/quickstart-connect-device-node.md
+      itemType: quickstart
+      text: IoT Hub にサンプル デバイスを接続する
+    - url: ../iot-pnp/concepts-developer-guide.md
+      itemType: concept
+      text: 開発者ガイド
+    footerLink:
+      url: ../iot-pnp/index.yml
+      text: 詳細情報
   - title: デバイス データの探索と分析
     links:
     - url: ../time-series-insights/time-series-insights-update-overview.md
@@ -158,6 +158,20 @@ conceptualContent:
     footerLink:
       url: ../azure-maps/index.yml
       text: 詳細情報
+  - title: 事前に構築された IoT ソリューションをカスタマイズする
+    links:
+    - url: ../iot-accelerators/about-iot-accelerators.md
+      itemType: overview
+      text: Azure IoT ソリューション アクセラレータとは
+    - url: ../iot-accelerators/quickstart-remote-monitoring-deploy.md
+      itemType: quickstart
+      text: リモート監視ソリューションを試す
+    - url: ../iot-accelerators/quickstart-connected-factory-deploy.md
+      itemType: quickstart
+      text: コネクテッド ファクトリ ソリューションを試す
+    footerLink:
+      url: ../iot-accelerators/index.yml
+      text: 詳細情報
 tools:
   title: Azure IoT SDK
   summary: Azure IoT SDK のリファレンス ドキュメント
@@ -165,7 +179,7 @@ tools:
   - title: Azure IoT SDK for C のリファレンス
     imageSrc: https://docs.microsoft.com/media/logos/logo_c.svg
     url: https://docs.microsoft.com/azure/iot-hub/iot-c-sdk-ref/
-  - title: Azure IoT SDK for Python (プレビュー)
+  - title: Azure IoT SDK for Python
     imageSrc: https://docs.microsoft.com/media/logos/logo_python.svg
     url: https://github.com/Azure/azure-iot-sdk-python
   - title: Azure IoT SDK for Node.js のリファレンス
