--- a/articles/media-services/live-video-analytics-edge/toc.yml
+++ b/articles/media-services/live-video-analytics-edge/toc.yml
@@ -30,6 +30,11 @@
       href: event-based-video-recording-tutorial.md
     - name: 数日間の記録の再生
       href: playback-multi-day-recordings-tutorial.md
+    - name: ライブ ビデオの分析
+      items:
+        - name: HTTP 拡張機能を使用した OVMS の使用
+          displayName: 'intel, OpenVINO'
+          href: use-intel-openvino-tutorial.md
 - name: サンプル
   items:
     - name: Live Video Analytics on IoT Edge の C# サンプル
